- Added a new Offering creation tab
- Added new rarity types (green for uncommon and blue for rare) and kept old ones under legacy names
- Added icons for the Freddy rework chapter, Kaneki chapter, Blood Moon event, and Orela Rose chapter
- Improved and added more features to the icon creator tab
- Improved mobile styling on all pages
- Squashed many bugs

Updated on 05-12-2025

Version 2.5
- Happy New Year! The Entity has concluded festivities and returned the website to normal
- Added icons from the Houndmaster chapter and the holidays event
- Fixed some bugs

Updated on 01-10-2025

Version 2.4
- Happy Halloween! Haunted by Daylight has taken over the website! You can remove those pesky spiders by clicking on them! (They can be tricky to hit, try clicking when they move down)
- Improved mobile styling throughout the entire website
- Text boxes will now automatically expand if their limit is reached to allow for longer/larger concepts
- Optimized loading times (if icons don't load in the icon editor, simply open another tab and go back)
- Added timestamps for profile creations (only new ones will include them)
- Added icons from Castelvania chapter, Lights Out event, Haunted by Daylight, and more
- Added export all and import all options to profile to easily save and share all of your concepts at once
- Squahsed some bugs (and spiders)

Updated on 10-18-2024

Version 2.3
- The Celebration has concluded and Tryks has returned to their home!
- New Profile tab that allows you to save and share concepts. Once done editing your concept, simple press "To Profile" to save it!
- Text will now automatically align to the left in text boxes when skipping a line
- Added icons from the new Tomb Raider chapter
- Added a one time popup for important changes about updates
- Updated FAQ
- Squashed some bugs!

Updated on 07-09-2024

Version 2.2
- Happy 8th Anniversary to Dead By Daylight! The Entity, and Tryks, are ready for celebrations and have re-themed the website!