@@ -235,7 +235,8 @@
                             - Added icons for the Freddy rework chapter, Kaneki chapter, Blood Moon event, and Orela Rose chapter<br>
                             - Improved and added more features to the icon creator tab<br>
                             - Improved mobile styling on all pages<br>
-                            - Squashed many bugs!<br>
+                            - Squashed many bugs!<br><br>
+                            - I wanted to take this time to thank everyone that has used the website, reported feedback, and suggested improvements. I greatly appreciate it :) <br>
                         </p>
                         <p>
                         </p>
@@ -759,7 +760,7 @@
                     <button type="button" class="collapsibleQuestion">How do I save a concept I have made?</button>
                     <div class="answer">
                         <p>By pressing the "Save" button, your image will appear in a new tab for you to right click and save. If it doesn't work, make sure
-                             your popups aren't blocked for this website!</p>
+                             your popups aren't blocked for this website! You can also view the next question to learn more about saving it to your profile.</p>
                     </div>
                     <button type="button" class="collapsibleQuestion">Can I save my progress on a concept and come back to it later?</button>
                     <div class="answer">
